Prevent layout shift

--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,10 @@
   box-sizing: border-box;
 }
 
+html {
+	overflow-y: overlay;
+}
+
 body {
 	font-family: "Quicksand", sans-serif;
 	background-color: var(--background-color);
